# cmake_example

./: .gitignore  README.md  docker-compose.yml
client/: CMakeLists.txt  Dockerfile  client.cpp
client/src/: client.cpp
server/: CMakeLists.txt  Dockerfile  server.cpp
server/src/: server.cpp
utility_library/: CMakeLists.txt
utility_library/include/: network.h
utility_library/src/: network.cpp
